# pr-review-workflow

./: .env.template  .eslintrc.json  .gitignore  .prettierignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: pr-review-claude.yml  pr-review-core.yml  pr-review-multiprompt.yml  pr-review.yml
MultiAgent-Orchestration-main/: README.md  main.py  pyproject.toml
MultiAgent-Orchestration-main/examples/: bad_pr.diff  bad_pr.py  quality.diff  security.diff
MultiAgent-Orchestration-main/scripts/: benchmark_parallel.ps1  build_presentation.ps1
MultiAgent-Orchestration-main/src/multiagent_lab/: __init__.py  cli.py  comparison.py  diff_parser.py  llm.py  models.py  prompts.py  report.py  supervisor.py
MultiAgent-Orchestration-main/src/multiagent_lab/agents/: __init__.py  base.py  quality.py  security.py  tests_coverage.py
MultiAgent-Orchestration-main/tests/: __init__.py  test_lab.py
TestProject/: pom.xml
TestProject/src/main/java/com/endava/juniorprogram/usersprogram/: UsersprogramApplication.java
cli/: config.ts  llm-client.ts  logger.ts  models.ts  review-pr.ts  tsconfig.json  workflow.ts
cli/steps/: action-executor.ts  code-analyzer.ts  index.ts  quality-evaluator.ts  review-generator.ts
src/: config.ts  llm-client.ts  logger.ts  main.ts  models.ts  workflow.ts
src/schemas/: index.ts  json-schemas.ts
src/steps/: action-executor.ts  code-analyzer.ts  index.ts  quality-evaluator.ts  review-generator.ts
tests/: models.test.ts
(+9 files in other folders)
