[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-lab"
version = "0.1.0"
description = "Multi-agent PR review lab with specialized agents and a supervisor."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
multiagent-lab = "multiagent_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
